--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "^5.0.1",
     "validator": "^13.7.0",
     "web-vitals": "^3.0.4"
   },
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-scripts": "^5.0.1"
   }
 }
